--- a/extra_credit_week2/src/main/webapp/addProject.html
+++ b/extra_credit_week2/src/main/webapp/addProject.html
@@ -5,23 +5,23 @@
 <title>Add a Car</title>
 </head>
 <body>
-	<form action="cars" method="post">
+	<form action="projects" method="post">
 	<table>
 		<tr>
-			<td>Make:</td>
-			<td><input type="text" name="make" /> </td>
+			<td>Description:</td>
+			<td><input type="text" name="description" /> </td>
 		</tr>
 		<tr>
-			<td>Model:</td>
-			<td><input type="text" name="model" /> </td>
+			<td>Location:</td>
+			<td><input type="text" name="location" /> </td>
 		</tr>
 		<tr>
-			<td>Year:</td>
-			<td><input type="text" name="year" /> </td>
+			<td>Start Date:</td>
+			<td><input type="text" name="startDate" /> </td>
 		</tr>
 		<tr>
-			<td>Color:</td>
-			<td><input type="text" name="color" /> </td>
+			<td>End Date:</td>
+			<td><input type="text" name="endDate" /> </td>
 		</tr>
 	</table>
 	<input type="submit"/>
